--- a/Mona/apps/baygui/mtorz/Makefile
+++ b/Mona/apps/baygui/mtorz/Makefile
@@ -1,6 +1,6 @@
 TARGET  = MTORZ
 SOURCES = mtorz.cpp
-INSTDIR = $(BINDIR)/root/APPS/BAYGUI
+INSTDIR = $(BINDIR)/iso/APPS/BAYGUI
 
 MONADIR    = ../../..
 ifneq ($(BUILD_TARGET),ELF)
