--- a/Mona/apps/non-gui/clock/Makefile
+++ b/Mona/apps/non-gui/clock/Makefile
@@ -1,6 +1,6 @@
 TARGET  = CLOCK
 SOURCES = clock.cpp
-INSTDIR = $(BINDIR)/root/APPS
+INSTDIR = $(BINDIR)/iso/APPS
 
 MONADIR = ../../..
 ifneq ($(BUILD_TARGET),ELF)
