--- a/Mona/apps/non-gui/pciinfo/Makefile
+++ b/Mona/apps/non-gui/pciinfo/Makefile
@@ -1,7 +1,7 @@
 TARGET  = PCIINFO
 SOURCES = pciinfo.cpp
 
-INSTDIR    = $(BINDIR)/root/APPS/$(TARGET).APP
+INSTDIR    = $(BINDIR)/iso/APPS/$(TARGET).APP
 INSTFILES  = PCIINF.BZ2
 CLEANFILES = $(INSTFILES)
 
