--- a/Mona/samples/non-gui/yamami/Makefile
+++ b/Mona/samples/non-gui/yamami/Makefile
@@ -1,6 +1,6 @@
 TARGET  = YAMAMI
 SOURCES = main.cpp
-INSTDIR = $(BINDIR)/root/APPS
+INSTDIR = $(BINDIR)/iso/APPS
 
 ADDLINK    = -lPci -lmonalibc
 ADDLINKDEP = $(MONADIR)/lib/libmonalibc.a
