--- a/Mona/src/servers/pe/Makefile
+++ b/Mona/src/servers/pe/Makefile
@@ -1,6 +1,6 @@
 TARGET  = PE
 SOURCES = main.cpp PEParser.cpp
-INSTDIR = $(BINDIR)/root/SERVERS
+INSTDIR = $(BINDIR)/iso/SERVERS
 
 MONADIR    = ../../..
 ADDLINK    = -lmonalibc
