--- a/Mona/apps/baygui/gnoiz2bg/Makefile
+++ b/Mona/apps/baygui/gnoiz2bg/Makefile
@@ -1,6 +1,6 @@
 TARGET  = GNOIZ2BG
 SOURCES = gnoiz2bg.cpp
-INSTDIR = $(BINDIR)/root/APPS/BAYGUI
+INSTDIR = $(BINDIR)/iso/APPS/BAYGUI
 
 MONADIR    = ../../..
 ifneq ($(BUILD_TARGET),ELF)
