--- a/Mona/apps/baygui/gshell/Makefile
+++ b/Mona/apps/baygui/gshell/Makefile
@@ -1,6 +1,6 @@
 TARGET  = GSHELL
 SOURCES = gshell.cpp
-INSTDIR = $(BINDIR)/root/APPS/BAYGUI
+INSTDIR = $(BINDIR)/iso/APPS/BAYGUI
 
 MONADIR    = ../../..
 ifneq ($(BUILD_TARGET),ELF)
