--- a/Mona/apps/baygui/mblupin/Makefile
+++ b/Mona/apps/baygui/mblupin/Makefile
@@ -1,6 +1,6 @@
 TARGET  = MBLUPIN
 SOURCES = mblupin.cpp
-INSTDIR = $(BINDIR)/root/APPS/BAYGUI
+INSTDIR = $(BINDIR)/iso/APPS/BAYGUI
 
 MONADIR    = ../../..
 ifneq ($(BUILD_TARGET),ELF)
