--- a/Mona/apps/non-gui/reversi/Makefile
+++ b/Mona/apps/non-gui/reversi/Makefile
@@ -1,7 +1,7 @@
 TARGET    = REVERSI
 SOURCES   = ReversiBoard.cpp reversi.cpp
 
-INSTDIR   = $(BINDIR)/root/APPS
+INSTDIR   = $(BINDIR)/iso/APPS
 
 MONADIR = ../../..
 ifneq ($(BUILD_TARGET),ELF)
