--- a/Mona/samples/gui/label/Makefile
+++ b/Mona/samples/gui/label/Makefile
@@ -1,6 +1,6 @@
 TARGET  = LABEL
 SOURCES = Form1.cpp
-INSTDIR = $(BINDIR)/root/APPS/MONAFRMS
+INSTDIR = $(BINDIR)/iso/APPS/MONAFRMS
 
 MONADIR    = ../../..
 ADDLINK    = -lgui
