--- a/Mona/src/lib/monapi/Makefile
+++ b/Mona/src/lib/monapi/Makefile
@@ -70,7 +70,9 @@ depend:
 install: $(TARGET)
 ifneq ($(BUILD_TARGET),ELF)
 	mkdir -p $(MONADIR)/bin/root/LIBS
+	mkdir -p $(MONADIR)/bin/iso/LIBS
 	$(INSTALL) $(LIB_DYNAMIC5) $(MONADIR)/bin/root/LIBS
+	$(INSTALL) $(LIB_DYNAMIC5) $(MONADIR)/bin/iso/LIBS
 endif
 
 include dependencies
