--- a/Mona/src/servers/gui/Makefile
+++ b/Mona/src/servers/gui/Makefile
@@ -11,13 +11,9 @@ else
 include $(MONADIR)/env/monapi-bn5.inc
 endif
 
-install-gui: #MONAWALL.BM5
+install-gui:
 	$(INSTALL) STARTMF.MSH $(MONADIR)/bin/iso/APPS
 	$(INSTALL) BAYGUI.MSH $(MONADIR)/bin/iso/APPS
-#	$(INSTALL) MONAWALL.BM5 $(MONADIR)/bin/iso
-
-#MONAWALL.BM5: MONAWALL.BMP
-#	$(MONADIR)/bin/bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
 install: install-gui
 
