--- a/Mona/bin/root/MONITOR.CFG
+++ b/Mona/bin/root/MONITOR.CFG
@@ -5,6 +5,6 @@ SERVER=/SERVERS/PE.BN5
 # SERVER=/SERVERS/MONES.EX5
 SERVER=/SERVERS/KEYBDMNG.EX5
 SERVER=/SERVERS/MOUSE.EX5
-SERVER=/SERVERS/IMESVR.EX5
+#SERVER=/SERVERS/IMESVR.EX5
 SERVER=/SERVERS/OLDSHELL.EX5
 # SERVER=/SERVERS/BAYGUI.EX5
