dont run gbrowser and gchat

--- a/Mona/apps/baygui/Makefile
+++ b/Mona/apps/baygui/Makefile
@@ -1,7 +1,7 @@
 all:
 	@cd gbball && $(MAKE) $@
-	@cd gbrowser && $(MAKE) $@
-	@cd gchat && $(MAKE) $@
+#	@cd gbrowser && $(MAKE) $@
+#	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
 	@cd gfire && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
@@ -20,8 +20,8 @@ all:
 
 install:
 	@cd gbball && $(MAKE) $@
-	@cd gbrowser && $(MAKE) $@
-	@cd gchat && $(MAKE) $@
+#	@cd gbrowser && $(MAKE) $@
+#	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
 	@cd gfire && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
@@ -40,8 +40,8 @@ install:
 
 clean: touchdepend
 	@cd gbball && $(MAKE) $@
-	@cd gbrowser && $(MAKE) $@
-	@cd gchat && $(MAKE) $@
+#	@cd gbrowser && $(MAKE) $@
+#	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
 	@cd gfire && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
@@ -60,8 +60,8 @@ clean: touchdepend
 
 depend: touchdepend
 	@cd gbball && $(MAKE) $@
-	@cd gbrowser && $(MAKE) $@
-	@cd gchat && $(MAKE) $@
+#	@cd gbrowser && $(MAKE) $@
+#	@cd gchat && $(MAKE) $@
 	@cd gclock && $(MAKE) $@
 	@cd gfire && $(MAKE) $@
 	@cd glaunch && $(MAKE) $@
@@ -80,8 +80,8 @@ depend: touchdepend
 
 distclean:
 	rm -f gbball/dependencies
-	rm -f gbrowser/dependencies
-	rm -f gchat/dependencies
+#	rm -f gbrowser/dependencies
+#	rm -f gchat/dependencies
 	rm -f gclock/dependencies
 	rm -f gfire/dependencies
 	rm -f glaunch/dependencies
@@ -100,8 +100,8 @@ distclean:
 
 touchdepend:
 	touch gbball/dependencies
-	touch gbrowser/dependencies
-	touch gchat/dependencies
+#	touch gbrowser/dependencies
+#	touch gchat/dependencies
 	touch gclock/dependencies
 	touch gfire/dependencies
 	touch glaunch/dependencies
