*** empty log message ***

--- a/Mona/apps/baygui/gfire/Makefile
+++ b/Mona/apps/baygui/gfire/Makefile
@@ -14,7 +14,7 @@ ADDLINKDEP = $(MONADIR)/lib/libbaygui.a
 include $(MONADIR)/env/monapi-el5.inc
 .SUFFIXES: .asm .o
 .asm.o:
-	$(NASM) $(NFLAGS) -o $@ -felf $<
+	$(NASM) $(NFLAGS) -o $@ -fwin32 $<
 
 #endif
 
