*** empty log message ***

--- a/Mona/apps/baygui/gfire/Makefile
+++ b/Mona/apps/baygui/gfire/Makefile
@@ -4,19 +4,15 @@ NASMSRCS = fire.asm
 INSTDIR = $(BINDIR)/iso/APPS/BAYGUI
 
 MONADIR    = ../../..
-#ifneq ($(BUILD_TARGET),ELF)
-#ADDLINK    = -lbaygui-imp
-#ADDLINKDEP = $(MONADIR)/lib/libbaygui-imp.a
-#include $(MONADIR)/env/monapi-ex5.inc
-#else
+ifneq ($(BUILD_TARGET),ELF)
+ADDLINK    = -lbaygui-imp
+ADDLINKDEP = $(MONADIR)/lib/libbaygui-imp.a
+include $(MONADIR)/env/monapi-ex5.inc
+else
 ADDLINK    = -lbaygui
 ADDLINKDEP = $(MONADIR)/lib/libbaygui.a
 include $(MONADIR)/env/monapi-el5.inc
-.SUFFIXES: .asm .o
-.asm.o:
-	$(NASM) $(NFLAGS) -o $@ -fwin32 $<
-
-#endif
+endif
 
 CXXFLAGS += -DDEBUG
 
