--- a/Mona/env/cygwin.env
+++ b/Mona/env/cygwin.env
@@ -9,7 +9,7 @@ RANLIB   = ranlib
 INSTALL  = install
 CFLAGS   = -nostdlib -Wall -fno-builtin -O3 -DMONA -DDEBUG_BUILD -DHOST_CYGWIN
 CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
-NFLAGS   = -I $(MONADIR)/include/ -f win32
+NFLAGS   = -I $(MONADIR)/include/ -f gnuwin32
 OSTYPE   = `uname -sr`
 EXEEXT   = .exe
 
