--- a/Mona/apps/gui/fire/Makefile
+++ b/Mona/apps/gui/fire/Makefile
@@ -4,18 +4,15 @@ NASMSRCS = fire.asm
 INSTDIR  = $(BINDIR)/iso/APPS/MONAFRMS
 
 MONADIR    = ../../..
-#ifneq ($(BUILD_TARGET),ELF)
-#ADDLINK    = -lgui-imp
-#ADDLINKDEP = $(MONADIR)/lib/libgui-imp.a
-#include $(MONADIR)/env/monapi-ex2.inc
-#else
+ifneq ($(BUILD_TARGET),ELF)
+ADDLINK    = -lgui-imp
+ADDLINKDEP = $(MONADIR)/lib/libgui-imp.a
+include $(MONADIR)/env/monapi-ex2.inc
+else
 ADDLINK    = -lgui
 ADDLINKDEP = $(MONADIR)/lib/libgui.a
 include $(MONADIR)/env/monapi-el2.inc
-#endif
-.SUFFIXES: .asm .o
-.asm.o:
-	$(NASM) $(NFLAGS) -o $@ -fwin32 $<
+endif
 
 CXXFLAGS += -DDEBUG
 
