--- a/Mona/src/lib/monalibc/Makefile
+++ b/Mona/src/lib/monalibc/Makefile
@@ -10,10 +10,13 @@ endif
 
 SOURCES = ctype.cpp    \
           monalibc.cpp \
-          stdarg.cpp   \
           stdio.cpp    \
           stdlib.cpp   \
           math.cpp     \
+          time.cpp     \
+          setjmp.cpp   \
+          string.cpp   \
+
 
 MONADIR  = ../../..
 include $(MONADIR)/env/dirnames.inc
