devide sources by classes

--- a/Mona/apps/baygui/glaunch/Makefile
+++ b/Mona/apps/baygui/glaunch/Makefile
@@ -1,5 +1,5 @@
 TARGET  = GLAUNCH
-SOURCES = glaunch.cpp
+SOURCES = main.cpp glaunch.cpp gshortcut.cpp
 INSTDIR = $(BINDIR)/iso/APPS/BAYGUI
 
 MONADIR    = ../../..
