--- a/Mona/apps/baygui/mblupin/Makefile
+++ b/Mona/apps/baygui/mblupin/Makefile
@@ -4,7 +4,7 @@ INSTDIR = $(BINDIR)/iso/APPS/BAYGUI
 
 MONADIR    = ../../..
 ifneq ($(BUILD_TARGET),ELF)
-ADDLINK    = -lbaygui-imp -lmonalibc-imp
+ADDLINK    = -lbaygui -lmonalibc-imp
 ADDLINKDEP = $(MONADIR)/lib/libbaygui-imp.a
 include $(MONADIR)/env/monapi-ex5.inc
 else
