--- a/Mona/src/servers/mones/Makefile
+++ b/Mona/src/servers/mones/Makefile
@@ -10,7 +10,8 @@ SOURCES = mones.cpp            \
           MoIcmp.cpp           \
           MonesConfig.cpp      \
           MonesLoader.cpp      \
-          MoPacUtl.cpp
+          MoPacUtl.cpp         \
+          Socket.cpp         
 
 INSTDIR = $(BINDIR)/iso/SERVERS
 
