--- a/MonaNew/core/monapi/Makefile
+++ b/MonaNew/core/monapi/Makefile
@@ -81,6 +81,7 @@ install: $(TARGET)
 ifneq ($(BUILD_TARGET),ELF)
 	$(INSTALL) -m 0644 $(LIB_IMPORT) $(LIBDIR)/
 	mkdir -p $(BINDIR)/LIBS
+	$(INSTALL) $(LIB_DYNAMIC5) $(BINDIR)/LIBS/
 	$(INSTALL) -m 0644 $(CRT_OBJECT) $(LIB_STATIC) $(LIBDIR)/
 endif
 	mkdir -p $(INCDIR)/monapi
