*** empty log message ***

--- a/MonaNew/tool/mkimg/Makefile
+++ b/MonaNew/tool/mkimg/Makefile
@@ -1,9 +1,18 @@
-all: mona.img
-
-mona.img:
+all:
+	make clean
 	perl mkimg.pl
+	make iso
 
 clean:
 	rm -f mona.img
+
+iso:
+	cp mona.img $(MONADIR)/bin
+	cp AUTOEXEC.MSH $(MONADIR)/bin
+	cp MONITOR.CFG $(MONADIR)/bin
+	cp MONA.CFG $(MONADIR)/bin
+	cd $(MONADIR) && mkisofs -v -iso-level 1 -b mona.img -o mona.iso bin
+	mv $(MONADIR)/mona.iso .
+	rm -f $(MONADIR)/bin/mona.img
 
 distclean: clean
