--- a/contrib_0.3/Graphics/libbaygui/Makefile
+++ b/contrib_0.3/Graphics/libbaygui/Makefile
@@ -29,6 +29,7 @@ SOURCES = \
 	awt/Window.cpp \
 	lang/Object.cpp \
 	lang/String.cpp \
+	lang/Thread.cpp \
 	util/Hashtable.cpp \
 	util/Vector.cpp
 
@@ -45,7 +46,7 @@ $(LIB_STATIC): $(OBJECTS)
 ifneq ($(BUILD_TARGET),ELF)
 $(LIB_IMPORT): $(LIB_DYNAMIC)
 $(LIB_DYNAMIC): $(OBJECTS)
-	$(LD) --export-all-symbols --out-implib $(LIB_IMPORT) -o $@ $(OBJECTS) -L$(MONADIR)/lib -lmonapi-imp
+	$(LD) --export-all-symbols --out-implib $(LIB_IMPORT) -o $@ $(OBJECTS) -L$(MONADIR)/lib -lmonapi-imp -lmonalibc-imp
 	$(STRIP) $@
 
 $(LIB_DYNAMIC5): $(LIB_DYNAMIC)
