*** empty log message ***

--- a/contrib_0.3/Graphics/libbaygui/Makefile
+++ b/contrib_0.3/Graphics/libbaygui/Makefile
@@ -3,6 +3,7 @@ TARGET       = $(LIB_STATIC)
 
 include $(MONADIR)/share/configs/Makefile.inc
 include $(MONADIR)/share/configs/dirnames.inc
+include $(MONADIR)/share/configs/monapi.inc
 
 ifneq ($(BUILD_TARGET),ELF)
 LIB_IMPORT   = libbaygui-imp.a
